--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reapop-theme-wybo",
+  "name": "@keymastervn/reapop-theme-wybo",
   "version": "1.0.3",
   "description": "Official theme for Reapop",
   "main": "index.js",
